# water-law-dataset

./: .env.example  .gitignore  CITATION.cff  FUTURE_WORK.md  LICENSE  README.md  RESEARCH_CONTEXT.md  SUPERVISOR_REPORT_v0.3.0.md  pyproject.toml  requirements.txt  water_law_dashboard.html  wiki_key_findings.md
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
arxiv/: main.tex  references.bib
docs/: index.html
research-assistant/: .env.example  .gitignore  README.md  SUBMISSION.md  agents.py  app.py  charts.py  data_loader.py  export_memo.py  requirements.txt
scrapers/brazil/: tjac_scraper.py  tjdft_scraper.py  tjpi_scraper.py  tjrj_scraper.py  tjrr_scraper.py  tjsc_scraper.py  tjsp_transformation_loader.py  tjto_scraper.py
scrapers/canada/: canada_canlii_extra.py  canada_ldh_scraper.py  canada_superior_expanded.py  canlii_scraper.py
scrapers/netherlands/: rechtspraak_district_courts.py  rechtspraak_expanded.py  rechtspraak_scraper.py
utils/: build_report.py  integrate_dissertation.py  jurimetric_coding.py  make_progress_charts.py  merge_national.py
validation/: METHODS_NOTE_aansluitplicht.md  README.md  RESIDUAL_AUDIT.md  VALIDATION_REPORT_v0.3.0.docx  apply_coder2_labels.py  build_report.js  coder1_kappa.csv  coder1_labels.csv  coder2_labels.csv  coder2_labels_full.csv  coder2_labels_template.csv  generate_all_outputs.py  kappa_agreement_detail.csv  kappa_calculator.py  kappa_results.json  precision_recall_results.json  residual_audit.py  second_coder_labeled.csv  second_coder_protocol.md  second_coder_sample_raw.csv  transformer_classifier.py  validation_report_data.json  validation_results.xlsx
