[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "water-law-dataset"
version = "0.1.0"
description = "Scrapers for comparative water law judicial decisions across Brazil, Canada, and the Netherlands (2016-2026)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["water-law", "judicial-decisions", "brazil", "scraping", "legal-research", "jurisprudencia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.optional-dependencies]
utils = ["pandas>=2.0", "openpyxl>=3.1", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*", "utils*"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "W0611", "R0914", "R0915"]

[tool.pylint.format]
max-line-length = 120
