[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-law-dataset"
version = "0.2.1"
description = "Scrapers and jurimetric coding engine for 83,596 comparative water law judicial decisions across Brazil, Canada, and the Netherlands (2016-2026)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["water-law", "judicial-decisions", "brazil", "netherlands", "canada", "scraping", "legal-research", "jurisprudencia", "jurimetrics", "comparative-law", "administrative-law", "open-data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.optional-dependencies]
utils = ["pandas>=2.0", "openpyxl>=3.1", "matplotlib>=3.7"]

[tool.setuptools.package-data]
"*" = ["*.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*", "utils*"]
namespaces = true

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "W0611", "R0914", "R0915"]

[tool.pylint.format]
max-line-length = 120
